--- a/index.Rmd
+++ b/index.Rmd
@@ -10,6 +10,8 @@ links:
     url: "https://github.com/jrash"
   - label: Email
     url: "mailto:jeremyryanash@gmail.com"
+  - label: CV
+    url: "https://github.com/jrash/jrash.github.io/tree/master/jeremy_ash_cv.pdf"
 output:
   postcards::trestles
 ---
